--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,13 @@ body {
     text-align: center;
 }
 
+/* Styling untuk logo */
+.logo {
+    width: 120px;
+    display: block;
+    margin: 0 auto 15px auto;
+}
+
 label {
     display: block;
     text-align: left;
