--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,32 @@ button:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
-.popup-content button {
+/* SoundCloud Player Container */
+.soundcloud-container {
+    position: relative;
+    width: 100%;
+    height: 166px;
+}
+
+/* Overlay untuk Menutupi Player */
+.soundcloud-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 2;
+}
+
+/* Play Button */
+#playButton {
     background-color: red;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
     margin-top: 10px;
+    width: 100%;
 }
